--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://KyryloPikhno.github.io/news",
+  "homepage": "http://mywebsite.com/relativepath",
   "name": "news_app_typescript",
   "version": "0.1.0",
   "private": false,
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.3",
+    "env-cmd": "^10.1.0",
     "firebase": "^9.17.1",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
