--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "http://mywebsite.com/relativepath",
-  "name": "news_app_typescript",
+  "homepage": "/News_app_TypeScript_hg-pages/#",
+  "name": "News_app_TypeScript_hg-pages",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
