--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "/news",
+  "homepage": "https://kyrylopikhno.github.io",
   "name": "news",
   "version": "0.1.0",
   "private": true,
