--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kyrylopikhno.github.io/News_app_TypeScript_gh-pages/#/",
+  "homepage": "/News_gh-pages",
   "name": "news",
   "version": "0.1.0",
   "private": true,
